<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_cards">Cartão de Visita</string>
    <string name="text_btaddcard">adicionar novo card</string>
    <string name="label_description_business_cards">Novo Cartão</string>
    <string name="cancel">cancelar</string>
    <string name="conclusion">concluir</string>
    <string name="layer_nome">Nome</string>
    <string name="layer_telefone">Telefone</string>
    <string name="layer_email">Email</string>
    <string name="layer_empresa">Empresa</string>
    <string name="layer_cor">Cor</string>
    <string name="label_share">Compartilhar</string>
</resources>